--- a/business_directory/templates/careers/jobpost_detail.html
+++ b/business_directory/templates/careers/jobpost_detail.html
@@ -16,8 +16,13 @@
   <div class="row">
     <div class="col-lg-12">
       <div class="list-group">
+        <p>Category: {{ jobpost.category }}</p>
+        <p>Description: {{ jobpost.description }}</p>
+        <p>Created: {{ jobpost.created_on }}</p>
+        <p>Location: {{ jobpost.location }}</p>
+        <p>Budget: {{ jobpost.budget_from }} - {{ jobpost.budget_to }}</p>
 
-        
+        <input type="button" value="Apply"/>
       </div>
     </div>
   </div>
