--- a/business_directory/templates/search/search.html
+++ b/business_directory/templates/search/search.html
@@ -1,39 +1,76 @@
 {% extends 'base.html' %}
 
+{% block hero_text %}Search{% endblock %}
+{% block header %}<p>Click around!</p>{% endblock %}
+
 {% block content %}
-    <h2>Search</h2>
+    <div class="container">
+        <div class="span12">
+            <h1>Search</h1>
 
-    <form method="get" action=".">
-        <table>
-            {{ form.as_table }}
-            <tr>
-                <td>&nbsp;</td>
-                <td>
-                    <input type="submit" value="Search">
-                </td>
-            </tr>
-        </table>
-
+            <form method="get" action="." class=".form-search">
+                <table>
+                    {{ form.as_table }}
+                </table>
+                <input type="submit" value="Search">
+            </form>
+        </div>
         {% if query %}
-            <h3>Results</h3>
+            <div class="span2">
+                <h3>Filter</h3>
+                {% if facets.fields.type %}
+                    <div>
+                        <h4>Type</h4>
+                        <ul>
+                            {% for type in facets.fields.type %}
+                                <li>
+                                    <a href="{{ request.get_full_path }}&amp;selected_facets=type_exact:{{ type.0|urlencode }}">{{ type.0 }}</a>
+                                    ({{ type.1 }})
+                                </li>
+                            {% endfor %}
+                        </ul>
+                    </div>
+                {% endif %}
+                {% if facets.fields.category %}
+                    <div>
+                        <h4>Location</h4>
+                        <ul>
+                            {% for category in facets.fields.category %}
+                                <li>
+                                    <a href="{{ request.get_full_path }}&amp;selected_facets=category_exact:{{ category.0|urlencode }}">{{ category.0 }}</a>
+                                    ({{ category.1 }})
+                                </li>
+                            {% endfor %}
+                        </ul>
+                    </div>
+                {% endif %}
+            </div>
+            <div class="span6">
+                <h3>Results</h3>
 
-            {% for result in page.object_list %}
-                <p>
-                    <a href="{{ result.object.get_absolute_url }}">{{ result.object.title }}</a>
-                </p>
-            {% empty %}
-                <p>No results found.</p>
-            {% endfor %}
-
-            {% if page.has_previous or page.has_next %}
-                <div>
-                    {% if page.has_previous %}<a href="?q={{ query }}&amp;page={{ page.previous_page_number }}">{% endif %}&laquo; Previous{% if page.has_previous %}</a>{% endif %}
-                    |
-                    {% if page.has_next %}<a href="?q={{ query }}&amp;page={{ page.next_page_number }}">{% endif %}Next &raquo;{% if page.has_next %}</a>{% endif %}
+                <div class="accordion" id="accordion2">
+                    {% for result in page.object_list %}
+                        {% include 'search/_result_object.html' %}
+                    {% empty %}
+                        <p>No results found.</p>
+                    {% endfor %}
                 </div>
-            {% endif %}
+
+                {% if page.has_previous or page.has_next %}
+                    <div>
+                        {% if page.has_previous %}
+                            <a href="?q={{ query }}&amp;page={{ page.previous_page_number }}">{% endif %}&laquo;
+                        Previous{% if page.has_previous %}</a>{% endif %}
+                        |
+                        {% if page.has_next %}<a href="?q={{ query }}&amp;page={{ page.next_page_number }}">{% endif %}
+                        Next &raquo;{% if page.has_next %}</a>{% endif %}
+                    </div>
+                {% endif %}
+            </div>
         {% else %}
-            {# Show some example queries to run, maybe query syntax, something else? #}
+            <div class="span6">
+                {# Show some example queries to run, maybe query syntax, something else? #}
+            </div>
         {% endif %}
-    </form>
+    </div>
 {% endblock %}
