--- a/business_directory/templates/careers/jobpost_form.html
+++ b/business_directory/templates/careers/jobpost_form.html
@@ -3,8 +3,12 @@
 
 {% block title %}Careers{% endblock %}
 {% block content %}
-<form action="" method="post">{% csrf_token %}
-    {{ form.as_p }}
-    <input type="submit" value="Create" />
-</form>
+<div class="container">
+    <div class="row">
+        <form action="" method="post">{% csrf_token %}
+            {{ form.as_p }}
+            <input type="submit" value="Create" />
+        </form>
+    </div>
+</div>
 {% endblock content %}
