--- a/business_directory/templates/careers/category_list.html
+++ b/business_directory/templates/careers/category_list.html
@@ -25,6 +25,23 @@
       </div>
     </div>
   </div>
+ {% if is_paginated %}
+    <nav>
+        <ul class="pagination">
+            {% if page_obj.has_previous %}
+                <li><a href="{% url 'categories' %}?page={{ page_obj.previous_page_number }}"><span
+                        aria-hidden="true">&laquo;</span><span class="sr-only">Previous</span></a></li>
+            {% endif %}
+            <li class="active disabled">
+                <a href="#">Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.</a>
+            </li>
+            {% if page_obj.has_next %}
+                <li><a href="{% url 'categories' %}?page={{ page_obj.next_page_number }}"><span
+                        aria-hidden="true">&raquo;</span><span class="sr-only">Next</span></a></li>
+            {% endif %}
+        </ul>
+    </nav>
+{% endif %}
 
 </div>
 
